<resources>
    <string name="app_name">simplistic</string>
    <string name="add_task">enter task name</string>
    <string name="add">+</string>
    <string name="back">back</string>
    <string name="task_name">task name</string>
    <string name="low_priority">Low</string>
    <string name="medium_priority">Medium</string>
    <string name="high_priority">High</string>
    <string name="priority">Priority</string>
    <string name="save">save</string>
    <string name="edit">edit</string>
    <string name="sort_by">sort by</string>

    <string-array name="view_options_array">
        <item>High-Low</item>
        <item>Low-High</item>
    </string-array>
</resources>
