<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskInfoActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/ButtonBack"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:onClick="onClickButtonBack"
            android:text="@string/back"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTaskName"
            style="@android:style/Widget.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="18dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:editable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:text="@string/task_name"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toEndOf="@+id/ButtonBack"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonEdit"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="60dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="18dp"
            android:onClick="onClickButtonEdit"
            android:text="@string/edit"
            app:layout_constraintStart_toEndOf="@+id/editTextTaskName"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/priority"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <RadioGroup
        android:id="@+id/RadioGroupPriority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPriority">

        <RadioButton
            android:id="@+id/radioButtonLowPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/low_priority"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:visibility="visible"
            tools:layout_editor_absoluteX="90dp"
            tools:layout_editor_absoluteY="265dp" />

        <RadioButton
            android:id="@+id/radioButtonMediumPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:checked="false"
            android:text="@string/medium_priority" />

        <RadioButton
            android:id="@+id/radioButtonHighPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:text="@string/high_priority" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onClickButtonSave"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupPriority" />

</android.support.constraint.ConstraintLayout>